# tamatgochi

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  virtualCat.cpp  virtualCat.hpp
test/: CMakeLists.txt  virtualCatTest.cpp
